improved intent with empty list